--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h2>Desde 1950 consertando o seu sapato</h2>
     <main>
       <article>
+        <h1 class="article-title">
         <h1> Filosofia de Trabalho </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ullam distinctio modi dolor ut, hic itaque laudantium consequatur quis aliquam similique neque culpa accusamus totam eligendi, ex cupiditate officiis sapiente.
         </p>
