--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Desde 1950, a Sapataria do Oswaldo conserta sapatos, bolsas e artigos de couro em geral com excelência no atendimento">
     <meta name="keywords" content="Bolsas, sapatos, cintos, sapataria, artigos de couro, consertos">
-    <meta name="author" content="Anderson Fontes">
+    <meta name="author" content="Keiichi Tamashiro">
     <title>Sapataria do Oswaldo</title>
 
     <link rel="stylesheet" href="css/reset.css">
