--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     <footer class="footer">
         <address>
-             Rua das Laranjas 567<br>
-             Vila Ipiranga<br>
-             CEP 12345678
+             Rua São Valentimn 323 <br>
+             Vila Carrão <br>
+             CEP 03446-40
         </address>
     </footer>
 
